trying to fix alignment of different sections

--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,6 @@
     font-family: cursive;
     color: rgb(81, 44, 44);
     box-sizing: border-box;
-    
 }
 
 main {
@@ -17,7 +16,8 @@ main {
     border-left: 2px black solid;
     border-right: 2px black solid;
     padding: 0 20px;
-    background-color: rgba(255, 255, 255, 0.589);
+    background-color: rgba(255, 255, 255, 0.767);
+    flex-wrap: wrap;
 
 }
 
@@ -32,14 +32,16 @@ this will affect the <body></body> tag.
 you can use this to style any HTML tag, like <p>, <div>, <span>, <a>, etc.
 */
 body {
-    
-    background-image: url(bg.jpg);
-    background-color: #cccccc; /*always set if image unavilable*/
+
+    background-image: url(images/bg.jpg);
+    background-color: #cccccc;
+    /*always set if image unavilable*/
     background-position: center;
-    background-size:auto;
+    background-size: auto;
     background-repeat: repeat-x;
 
 }
+
 /*===============================TYPOGRAPHY===========================*/
 
 p {
@@ -73,24 +75,55 @@ nav {
     float: left;
     min-width: 150px;
     flex-wrap: wrap;
-    
+
     align-items: space-evenly;
-    
+
 }
-nav ul{
-    
+
+nav ul {
+
     padding: 25%;
     margin: 10%;
     display: flex;
     flex-direction: column;
-    border-radius: 15px;
+
     border: 3px var(--ccbrown) solid;
     background: #f4ede6be;
 }
+
 /*===============================container===========================*/
 
 /*===============================CLASSES===========================*/
-
+.container {
+    border: 4px var(--ccbrown) dotted;
+    border-radius: 15px;
+}
+.content{
+    flex: 1;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  padding: 1rem;
+  gap: 2rem;
+  flex-grow: 3;
+}
+.right{
+    flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.left{
+    flex-grow: 3;
+    flex-direction: row;
+}
+.footer {
+    font-size:smaller;
+    margin: 10px 10px;
+  text-align: left;
+  padding: 1rem;
+  font-weight: bold;
+}
 .intro {
     position-anchor: right;
     position: relative;
@@ -100,7 +133,6 @@ nav ul{
     float: left;
     width: 200px;
     margin: 10px;
-    border: 5px #000000be dotted;
 }
 
 div.gallery {
@@ -125,3 +157,10 @@ div.gallery-item.desc {
     padding: 15px;
     text-align: center;
 }
+
+/* Start https://www.cursors-4u.com */
+* {
+    cursor: url(https://cur.cursors-4u.net/holidays/hol-4/hol336.cur), auto !important;
+}
+
+/* End https://www.cursors-4u.com */
